--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
+    <link href="pkgs/normalize-css/normalize.css" rel="stylesheet" >
     <link href="pkgs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
@@ -19,8 +20,8 @@
 </head>
 <body>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -28,30 +29,251 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">whoalife</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#latest">Latest</a></li>
+                <li><a href="#past">Past</a></li>
+                <li><a href="#settings">Settings</a></li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</nav>
+
+<div>
+    <div class="container-fluid" id="latest" style="display:none">
+        Latest
+    </div>
+    <div class="container-fluid" id="past" style="display:none">
+        Past
+    </div>
+    <div class="container-fluid" id="settings" style="display:none">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h2>Settings</h2>
+                <form class="form-horizontal" role="settings">
+                    <div class="form-group">
+                        <label for="name" class="col-sm-3 control-label">Name</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" placeholder="Your Name" id="name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">Email</label>
+                        <div class="col-sm-9">
+                            <input type="email" class="form-control" placeholder="Email" id="email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="timezone" class="col-sm-3 control-label">Timezone</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" id="timezone">
+                                <option value="America/Los_Angeles">(GMT-08:00) Pacific Time (US & Canada)</option>
+                                <option>(GMT-07:00) Mountain Time (US & Canada)</option>
+                                <option>(GMT-06:00) Central Time (US & Canada)</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="hour" class="col-sm-3 control-label">Email At</label>
+                        <div class="col-sm-9">
+                            <select class="form-control" id="hour">
+                                <option value="0">12am</option>
+                                <option value="1">1am</option>
+                                <option value="2">2am</option>
+                                <option value="3">3am</option>
+                                <option value="4">4am</option>
+                                <option value="5">5am</option>
+                                <option value="6">6am</option>
+                                <option value="7">7am</option>
+                                <option value="8">8am</option>
+                                <option value="9">9am</option>
+                                <option value="10">10am</option>
+                                <option value="11">11am</option>
+                                <option value="12">12pm</option>
+                                <option value="13">1pm</option>
+                                <option value="14">2pm</option>
+                                <option value="15">3pm</option>
+                                <option value="16">4pm</option>
+                                <option value="17">5pm</option>
+                                <option value="18">6pm</option>
+                                <option value="19">7pm</option>
+                                <option value="20">8pm</option>
+                                <option value="21">9pm</option>
+                                <option value="22">10pm</option>
+                                <option value="23">11pm</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="webRoot" class="col-sm-3 control-label">Web Root</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" placeholder="https://my_site.herokuapp.com" id="webRoot">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary col-sm-2 col-sm-offset-10" id="save">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="container">
-
-    <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-    </div>
-
-</div>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="pkgs/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="pkgs/underscore/underscore.js"></script>
+<script src="pkgs/backbone/backbone.js"></script>
+
+<script>
+    $(function() {
+        var token = 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE0MTE2MDM3MTYsImV4cCI6MTQxMTY5MDExNn0.QgZzYY5iD8TOXD0hZwUEyhxkUo-zQcBEzyYdnDgzsKY';
+
+        var SettingsModel = Backbone.Model.extend({
+            url : '/settings'
+        });
+
+        var EntriesModel = Backbone.Model.extend({
+            urlRoot : '/entries'
+        });
+
+        var EntriesCollection = Backbone.Collection.extend({
+            model : EntriesModel,
+            url : '/entries'
+        });
+
+        var SettingsView = Backbone.View.extend({
+            el : '#settings',
+
+            events : {
+                'click #save' : 'save'
+            },
+
+            initialize : function() {
+                _.bindAll(this, 'render', 'save');
+                this.listenTo(this.model, 'change', this.render);
+                this.model.fetch();
+            },
+
+            render : function() {
+                $('#name').val(this.model.get('name'));
+                $('#email').val(this.model.get('email'));
+                $('#hour').val(this.model.get('hour'));
+                $('#timezone').val(this.model.get('timezone'));
+                $('#webRoot').val(this.model.get('webRoot'));
+            },
+
+            save : function(e) {
+                e.preventDefault();
+                // This seems to be the best way to force using a PUT when
+                // we're not using an id.
+                this.model.save({
+                    name : $('#name').val(),
+                    email : $('#email').val(),
+                    hour : $('#hour').val(),
+                    timezone : $('#timezone').val(),
+                    webRoot : $('#webRoot').val()
+                }, { type : 'put' });
+            }
+        });
+
+        var LatestView = Backbone.View.extend({
+            el : '#latest',
+
+            initialize : function() {
+                _.bindAll(this, 'render');
+                this.listenTo(this.model, 'change', this.render);
+                this.model.fetch();
+            },
+
+            render : function() {
+            }
+        });
+
+        var PastView = Backbone.View.extend({
+            el : '#past',
+
+            initialize : function() {
+                _.bindAll(this, 'render', 'add');
+                this.listenTo(this.collection, 'add', this.add);
+                this.collection.fetch();
+            },
+
+            add : function(entry) {
+            },
+
+            render : function() {
+            }
+        });
+
+        var Router = Backbone.Router.extend({
+            routes : {
+                'latest' : 'latest',
+                'past' : 'past',
+                'settings' : 'settings',
+                '*default' : 'default'
+            },
+
+            initialize : function() {
+                _.bindAll(this, 'changeView', 'default', 'latest', 'past', 'settings');
+                this.currentView = null;
+            },
+
+            changeView : function(view) {
+                if (this.currentView) {
+                    this.currentView.$el.hide();
+                }
+                this.currentView = view;
+                this.currentView.$el.show();
+            },
+
+            default : function() {
+                Backbone.history.navigate('latest', true);
+            },
+
+            latest : function() {
+                var view = new LatestView({
+                    model : new EntriesModel({
+                        id : 'latest'
+                    })
+                });
+                this.changeView(view);
+            },
+
+            past : function() {
+                var view = new PastView({
+                    collection : new EntriesCollection()
+                });
+                this.changeView(view);
+            },
+
+            settings : function() {
+                var view = new SettingsView({
+                    model : new SettingsModel()
+                });
+                this.changeView(view);
+            }
+        });
+
+        // We override Backbone's native sync method to add our authentication
+        // information to XHR requests.
+        var backboneSync = Backbone.sync;
+        Backbone.sync = function(method, model, options) {
+            options.beforeSend = function(xhr) {
+                xhr.setRequestHeader('Authorization', 'Bearer ' + token);
+            };
+            return backboneSync(method, model, options);
+        };
+
+        var router = new Router();
+
+        Backbone.history.start();
+
+        //            $('ul.nav > li').removeClass('active');
+        //            $('ul.nav li a[href=' + location.hash + ']').parent().addClass('active');
+    });
+
+</script>
 </body>
 </html>
