Removed token from index.

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
 
 <script>
     $(function() {
-        var token = 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE0MTE2MDM3MTYsImV4cCI6MTQxMTY5MDExNn0.QgZzYY5iD8TOXD0hZwUEyhxkUo-zQcBEzyYdnDgzsKY';
+        var token = '';
 
         var SettingsModel = Backbone.Model.extend({
             url : '/settings'
